--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Activité de palette</string>
+    <string name="app2_name">Activité de toile</string>
     <string name="intro_text">Cliquez sur une couleur ci-dessous pour lancer la toile</string>
     <string-array name="colors">
         <item>Blanc</item>
