--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Palette Activity</string>
+    <string name="app2_name">Canvas Activity</string>
     <string name="intro_text">Click a color below to launch the Canvas</string>
     <string-array name="colors">
         <item>White</item>
